# beeware-stuff

./: Pipfile  graze.py
f_to_c/: LICENSE  README.rst  setup.py
f_to_c/f_to_c/: __main__.py  app.py
f_to_c/flatpak/: app_requires.json  com.example.f_to_c.json
shapes/: LICENSE  README.rst  pyproject.toml
shapes/src/shapes/: __main__.py  app.py  models.py  toga_fixes.py  toga_gtk_fixes.py  transforms.py
